Added a new "Etc." submenu to the Edit menu, containing the dangerous menu items "Cut" and "Delete".

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -269,6 +269,9 @@ menu.image=Image
 menu.node=Node
 menu.link=Links
 menu.help=Help
+# Added by Apollia, Jan. 21, 2017, 8:03 AM.
+menu.etc=Etc.
+# End of Added by Apollia, Jan. 21, 2017, 8:03 AM.
 menu.file.new=New
 menu.file.revert=Revert
 menu.file.import=Import
