Added a new menu action "Insert Current Date/Time" (keyboard shortcut F5).
It's in the new "Insert Bubble or Text" submenu of the Edit menu.

If no bubble or link is selected, a new bubble containing the current date/time will be created.

Otherwise, the current/date/time will be added to the label of the selected bubble or link, either at the end of the label, or wherever the caret currently is.

The date/time format looks like this:

    2017-01-23 14:55:49

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -272,6 +272,11 @@ menu.help=Help
 # Added by Apollia, Jan. 21, 2017, 8:03 AM.
 menu.etc=Etc.
 # End of Added by Apollia, Jan. 21, 2017, 8:03 AM.
+
+# Added by Apollia, Jan. 21, 2017, 9:22 AM/2:16 PM.
+menu.insertbubbleortext=Insert Bubble or Text
+menu.insertbubbleortext.insertcurrentdatetime=Insert Current Date/Time
+# End of Added by Apollia, Jan. 21, 2017, 9:22 AM/2:16 PM.
 menu.file.new=New
 menu.file.revert=Revert
 menu.file.import=Import
