A new Edit menu item - Deselect. (Keyboard shortcut: ESC) Only works if only one item is selected.

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -222,6 +222,11 @@ menu.edit.rename=Rename
 menu.edit.selectall=Select All 
 menu.edit.selectlink=Select Links
 menu.edit.selectnodes=Select Nodes
+
+# Added by Apollia, Feb. 9, 2017, 11:18 PM.
+menu.edit.deselect=Deselect
+# End of Added by Apollia, Feb. 9, 2017, 11:18 PM.
+
 menu.edit.deselectall=Deselect All
 menu.edit.invertselection=Invert Selection
 menu.edit.reselect=Reselect
