--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+VUE2/bin
 VUE2/src/tufts/vue/Version.java
 
 # ignore test files
@@ -20,3 +26,6 @@ signing_code/VUE.app
 
 # ignore ide files
 .idea/
+
+*.orig
+.vscode
