--- a/VUE2/build.gradle
+++ b/VUE2/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     implementation 'org.apache.xmlgraphics:batik-svggen:1.8'
 
     // Apache Commons
-    implementation 'commons-httpclient:commons-httpclient:3.1-beta1'
+    implementation 'commons-httpclient:commons-httpclient:3.1'
     // TODO upgrade https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     implementation 'commons-lang:commons-lang:2.4'
     implementation 'commons-codec:commons-codec:1.3'
@@ -121,7 +121,7 @@ dependencies {
     // TODO this is some really old 'commons-net:commons-net:1.1.0' with extra classes I can't find anywhere else.
 
     // Apache FOP (Formatting Objects Processor)
-    implementation 'fop:fop:0.20.5-rc3-alpha'
+    implementation 'fop:fop:0.20.5'
     // TODO upgrade https://mvnrepository.com/artifact/org.apache.xmlgraphics/fop
 
     // Apache Tomcat
