--- a/VUE2/src/main/resources/tufts/vue/VueResources.properties
+++ b/VUE2/src/main/resources/tufts/vue/VueResources.properties
@@ -6,7 +6,17 @@
 # This section contains metadata used by VUE to identify the language and file verions
 info.language    = English
 info.fileVersion = 1.1
-info.VUEVersion  = 3.3.0
+info.VUEVersion  = 3.3.0+rp20190301
+
+# MUST ALSO UPDATE THIS TO MATCH
+vue.version=3.3.0+rp20190301
+
+vue.build.date=2003-2019
+
+vue.release.url=http://vue.tufts.edu/current_release.xml
+
+vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
+
 
 #mapviewer component menu
 mapViewer.componentMenu.info.label=Info
@@ -2334,15 +2344,6 @@ addLibrary.checkMarkIcon=/tufts/vue/images/checkmark.gif
 dsv.statuspanel.bgColor=#FFFFFF
 
 dsv.statuspanel.waitIcon=/tufts/vue/images/icon_feedback.gif
-
-#Version
-vue.version=3.3.0
-
-vue.build.date=2003-2015
-
-vue.release.url=http://vue.tufts.edu/current_release.xml
-
-vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 
 #help menu
 helpMenu.feedback.url=http://vue.tufts.edu/contact/
