Update version and download URL

--- a/VUE2/src/main/resources/tufts/vue/VueResources.properties
+++ b/VUE2/src/main/resources/tufts/vue/VueResources.properties
@@ -6,16 +6,16 @@
 # This section contains metadata used by VUE to identify the language and file verions
 info.language    = English
 info.fileVersion = 1.1
-info.VUEVersion  = 3.3.0+rp20190301
+info.VUEVersion  = 3.3.0+rp20200307
 
 # MUST ALSO UPDATE THIS TO MATCH
-vue.version=3.3.0+rp20190301
+vue.version=3.3.0+rp20200307
 
-vue.build.date=2003-2019
+vue.build.date=2003-2020
 
 vue.release.url=http://vue.tufts.edu/current_release.xml
 
-vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
+vue.download.url=https://github.com/rpavlik/VUE/releases
 
 
 #mapviewer component menu
