--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,19 @@ signing_code/VUE.app
 
 *.orig
 .vscode
+
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+
+.settings/
+.classpath
+.project
