--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,27 @@ signing_code/VUE.app
 
 # ignore the installer package
 signing_code/VUE.pkg
+
+# git files
+*.orig
+
+# editor files
+.vscode
+
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+
+.settings/
+.classpath
+.project
+
+*.iml
