--- a/VUE2/build.gradle
+++ b/VUE2/build.gradle
@@ -90,8 +90,8 @@ dependencies {
     implementation files('lib/OsidRegistry.jar')
 
     // Apache Axis
-    implementation 'axis:axis-ant:1.3'
-    implementation 'axis:axis:1.3'
+    implementation 'axis:axis-ant:1.4'
+    implementation 'axis:axis:1.4'
 
     // Apache Batik
     implementation 'org.apache.xmlgraphics:batik-dom:1.8'
@@ -131,8 +131,25 @@ dependencies {
 
     // Misc deps from repository
     implementation 'au.com.bytecode:opencsv:2.4'
-    implementation 'com.lowagie:itext:2.1.4'
-    implementation 'com.miglayout:miglayout:3.7.2'
+
+    // for PDF export, presentation notes
+    implementation('com.lowagie:itext:2.1.7'){
+             exclude group: 'bouncycastle', module: 'bcmail-jdk14'
+             exclude group: 'bouncycastle', module: 'bcprov-jdk14'
+             exclude group: 'bouncycastle', module: 'bctsp-jdk14'
+    }
+    constraints {
+        implementation ('bouncycastle:bcmail-jdk15to18:166') {
+            because 'version 138 is not available'
+        }
+        implementation ('bouncycastle:bcprov-jdk15to18:166') {
+            because 'version 138 is not available'
+        }
+        implementation ('bouncycastle:bctsp-jdk15to18:166') {
+            because 'version 138 is not available'
+        }
+    }
+    implementation 'com.miglayout:miglayout:3.7.4'
     implementation 'cryptix:cryptix:3.2.0'
     implementation 'javatar:javatar:2.5'
     implementation 'jdom:jdom:1.0' // migrate to org.jdom:jdom:1.1 or newer?
