--- a/VUE2/build.gradle
+++ b/VUE2/build.gradle
@@ -14,6 +14,7 @@ repositories {
         dir file('lib')
     }
     jcenter()
+    mavenCentral()
 }
 
 group = "edu.tufts.vue"
@@ -152,7 +153,7 @@ dependencies {
     implementation 'com.miglayout:miglayout:3.7.4'
     implementation 'cryptix:cryptix:3.2.0'
     implementation 'javatar:javatar:2.5'
-    implementation 'jdom:jdom:1.0' // migrate to org.jdom:jdom:1.1 or newer?
+    implementation 'org.jdom:jdom-legacy:1.1.3'
     implementation 'log4j:log4j:1.2.17'
     implementation 'net.java.dev.jgoodies:looks:2.1.4'
     implementation 'net.java.linoleum:jlfgr:1_0'
