--- a/VUE2/build.gradle
+++ b/VUE2/build.gradle
@@ -57,10 +57,11 @@ jar {
 }
 
 launch4j {
-  mainClassName = 'tufts.vue.VUE'
-
+  outfile = 'VUE.exe'
+  mainClassName = project.mainClassName
+  copyConfigurable = project.tasks.shadowJar.outputs.files
+  jar = "lib/${project.tasks.shadowJar.archiveName}"
   xmlFileName = "${projectDir}/Nullsoft-Installer/VUE-launch4j.xml"
-  manifest = "${projectDir}/Nullsoft-Installer/VUE-launcher.manifest"
   icon = "${projectDir}/Nullsoft-Installer/VUE.ico"
 }
 
