Separate artifact package for windows exe

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,5 +41,5 @@ jobs:
     - name: Upload Windows executable
       uses: actions/upload-artifact@v1
       with:
-        name: bundles
+        name: windows
         path: VUE2/build/launch4j
